# serial-client

./: .gitignore  ENHANCEMENTS.md  PROJECT_STATUS.md  README.md  build.sh
cpp-serial/: CMakeLists.txt  README.md  main.cpp
csharp-serial/: MainPage.xaml  MainPage.xaml.cs  README.md  SerialDebugger.csproj
examples/: arduino_test.ino
flutter-serial/: README.md  pubspec.yaml
flutter-serial/lib/: main.dart
go-serial/: README.md  app.go  go.mod  main.go  serial-debugger-linux-x64  serial-debugger-macos-arm64  serial-debugger-macos-intel  serial-debugger-pro-linux-x64  serial-debugger-pro-macos-arm64  serial-debugger-pro-macos-intel  serial-debugger.go  simple-serial.go  wails.json
go-serial-gui/: commands.go  config.go  datalogger.go  go.mod  go.sum  logparser.go  main.go  monitor.go  protocol.go  waveform.go
python-serial/: README.md  log_parser.py  logcat_colors.py  main_simple.py  requirements.txt  run.py  serial_worker.py
rust-serial/: Cargo.toml  README.md
rust-serial/.cargo/: config.toml
rust-serial/src/: main.rs
tauri-serial/: README.md  electron-main.js  index.html  package-lock.json  package.json  preload.js  tauri.conf.json
tauri-serial/src/: App.css  App.jsx  index.css  logcatParser.js
tauri-serial/src-tauri/: Cargo.toml  tauri.conf.json
tauri-serial/src-tauri/src/: main.rs
